--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <a class="badge" href="https://www.linkedin.com/in/remi-leroy-3747612a5" target="_blank" rel="noopener" aria-label="LinkedIn">
           <i class="fa-brands fa-linkedin"></i> LinkedIn
         </a>
-        <a class="badge" href="#" target="_blank" rel="noopener" aria-label="GitHub">
+        <a class="badge" href="https://github.com/luxio4" target="_blank" rel="noopener" aria-label="GitHub">
           <i class="fa-brands fa-github"></i> GitHub
         </a>
       </div>
