--- a/cv.html
+++ b/cv.html
@@ -50,11 +50,9 @@
           <span role="listitem"><i class="fa fa-phone" aria-hidden="true"></i> 06 58 69 32 77</span>
           <span role="listitem"><i class="fa fa-envelope" aria-hidden="true"></i> remileroy575@gmail.com</span>
           <span role="listitem"><i class="fa fa-id-card" aria-hidden="true"></i> Permis B + <i class="fa fa-car" aria-hidden="true"></i> Voiture</span></span>
-
-          <span role="listitem"><i class="fa-brands fa-linkedin" aria-hidden="true"></i> /in/remi-leroy-3747612a5</span>
         </div>
 
-        <p class="mt-1"><strong>Objectif :</strong> Alternance Réseaux & Cybersécurité – Sept. 2025</p>
+        <p class="mt-1"><strong>Objectif :</strong> Stage pour le 16 février 2026</p>
 
         <div class="skill-chips" aria-label="Compétences clés">
           <span class="chip">Proxmox</span><span class="chip">Cisco</span>
@@ -124,33 +122,6 @@
     </div>
   </section>
 
-  <!-- COMPÉTENCES -->
-  <section id="competences" class="section">
-    <div class="container">
-      <h2 class="section-title"><span class="dot"></span> Compétences</h2>
-      <div class="grid">
-        <article class="card">
-          <h3>Réseaux & Développement</h3>
-          <ul>
-            <li>DHCP, DNS, Active Directory</li>
-            <li>Apache2, SSL, VPN (OpenVPN)</li>
-            <li>Switch, Routeurs, Pare-feu Cisco & Fortinet</li>
-            <li>Python, Bash, PowerShell, MySQL, PostgreSQL</li>
-          </ul>
-        </article>
-        <article class="card">
-          <h3>Cybersécurité</h3>
-          <ul>
-            <li>Nmap, Nessus, Hydra, Hashcat</li>
-            <li>IDS/IPS, Stéganographie, OSINT</li>
-            <li>Volatility, Airodump</li>
-            <li>Docker & VMware sécurisés</li>
-          </ul>
-        </article>
-      </div>
-    </div>
-  </section>
-
   <button class="back-to-top" aria-label="Revenir en haut">
     <i class="fa fa-arrow-up" aria-hidden="true"></i>
   </button>
@@ -166,10 +137,7 @@
    </a>
    
       <div class="footer-links mt-2">
-        <a class="badge" href="https://www.linkedin.com/in/remi-leroy-3747612a5" target="_blank" rel="noopener" aria-label="LinkedIn">
-          <i class="fa-brands fa-linkedin"></i> LinkedIn
-        </a>
-        <a class="badge" href="#" target="_blank" rel="noopener" aria-label="GitHub">
+        <a class="badge" href="https://github.com/luxio4" target="_blank" rel="noopener" aria-label="GitHub">
           <i class="fa-brands fa-github"></i> GitHub
         </a>
       </div>
