--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Rémi LEROY – Alternance Réseaux & Cybersécurité</title>
+  <title>Rémi LEROY</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Rémi LEROY – Étudiant en BUT Réseaux & Télécoms (IUT Béthune), recherche alternance réseaux & cybersécurité pour septembre 2025. Administration réseau, automation, sécurité.">
   <meta name="author" content="Rémi LEROY">
@@ -49,12 +49,12 @@
       <div class="container hero-content">
         <h1 id="hero-title">
           <span class="gradient gradient-anim">Recherche de stage</span><br>
-          <span class="gradient gradient-anim">à partir du 16&nbsp;février&nbsp;2025</span><br><br>
+          <span class="gradient gradient-anim">à partir du 16&nbsp;février&nbsp;2026</span><br><br>
           <small>Objectif&nbsp;: explorer les <strong>réseaux</strong> puis évoluer vers la <strong>cybersécurité</strong></small>
         </h1><br>
         <p>Étudiant en <strong>3ᵉ année de BUT Réseaux & Télécoms</strong> à l’IUT de Béthune, je vise une <strong>école d’ingénieur</strong> pour approfondir l’<strong>administration réseau</strong> et évoluer vers la cybersécurité.</p>
         <div class="hero-buttons">
-          <a href="remi-leroy-cv.pdf" class="btn btn-primary" target="_blank" rel="noopener">Télécharger le CV</a>
+          <a href="/file/remi-leroy-cv.pdf" class="btn btn-primary" target="_blank" rel="noopener">Télécharger le CV</a>
           <a href="cv.html" class="btn btn-ghost">Voir la présentation</a>
         </div>
       </div>
@@ -82,7 +82,7 @@
           qui me motive par sa dimension stratégique et évolutive.
         </p>
         <p>
-          Je recherche une alternance dès <strong>septembre 2025</strong> dans tout type d’entreprise, avec des missions
+          Je recherche d'un dès <strong>le 16 février 2026</strong> dans tout type d’entreprise, avec des missions
           en <strong>supervision</strong>, <strong>sécurité</strong> ou <strong>administration</strong> des systèmes et
           réseaux, pour contribuer activement tout en développant mes compétences.
         </p>
@@ -264,9 +264,6 @@
    </a>
    
       <div class="footer-links mt-2">
-        <a class="badge" href="https://www.linkedin.com/in/remi-leroy-3747612a5" target="_blank" rel="noopener" aria-label="LinkedIn">
-          <i class="fa-brands fa-linkedin"></i> LinkedIn
-        </a>
         <a class="badge" href="https://github.com/luxio4" target="_blank" rel="noopener" aria-label="GitHub">
           <i class="fa-brands fa-github"></i> GitHub
         </a>
