--- a/cv.html
+++ b/cv.html
@@ -4,25 +4,29 @@
   <meta charset="UTF-8">
   <title>CV – Rémi LEROY</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="CV de Rémi LEROY – Alternance Réseaux & Cybersécurité (septembre 2025). Expériences, compétences, formations.">
+  <meta name="description" content="CV de Rémi LEROY – Stage Réseaux & Cybersécurité à partir du 16 février 2026. Expériences, compétences, formations.">
+  
   <link rel="icon" href="favicon.png" type="image/png">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <a class="skip-link" href="#profil">Aller au contenu principal</a>
 
-  <!-- NAVBAR identique à l'index -->
-  <header class="navbar">
+  <!-- NAVBAR -->
+  <header class="navbar" role="banner">
     <div class="container">
       <a href="index.html" class="logo" aria-label="Retour à l'accueil">
-        <span class="logo-dot" aria-hidden="true"></span> Rémi LEROY
+        <span class="logo-dot" aria-hidden="true"></span>
+        <span>Rémi LEROY</span>
       </a>
 
-      <input type="checkbox" class="nav-toggle" id="nav-toggle" aria-label="Ouvrir le menu">
+      <input type="checkbox" class="nav-toggle" id="nav-toggle" aria-label="Ouvrir le menu de navigation">
       <label for="nav-toggle" class="nav-toggle-label" aria-controls="cv-navigation" aria-expanded="false">
         <span class="hamburger" aria-hidden="true"></span>
       </label>
@@ -42,22 +46,34 @@
   <section id="profil" class="section">
     <div class="container grid">
       <article class="card">
-        <h2 class="section-title"><span class="dot"></span> Profil</h2>
+        <h2 class="section-title">
+          <span class="dot" aria-hidden="true"></span> Profil
+        </h2>
         <h1 class="cv-name">Rémi LEROY</h1>
         <p>19 ans • Béthune</p>
 
         <div class="tags" role="list" aria-label="Coordonnées">
-          <span role="listitem"><i class="fa fa-phone" aria-hidden="true"></i> 06 58 69 32 77</span>
-          <span role="listitem"><i class="fa fa-envelope" aria-hidden="true"></i> remileroy575@gmail.com</span>
-          <span role="listitem"><i class="fa fa-id-card" aria-hidden="true"></i> Permis B + <i class="fa fa-car" aria-hidden="true"></i> Voiture</span></span>
+          <span role="listitem">
+            <i class="fa fa-phone" aria-hidden="true"></i> 06 58 69 32 77
+          </span>
+          <span role="listitem">
+            <i class="fa fa-envelope" aria-hidden="true"></i> remileroy575@gmail.com
+          </span>
+          <span role="listitem">
+            <i class="fa fa-id-card" aria-hidden="true"></i> Permis B 
+            <i class="fa fa-car" aria-hidden="true"></i> Véhicule personnel
+          </span>
         </div>
 
-        <p class="mt-1"><strong>Objectif :</strong> Stage pour le 16 février 2026</p>
+        <p class="mt-1"><strong>Objectif :</strong> Stage en réseaux & cybersécurité à partir du <strong>16 février 2026</strong></p>
 
         <div class="skill-chips" aria-label="Compétences clés">
-          <span class="chip">Proxmox</span><span class="chip">Cisco</span>
-          <span class="chip">Linux</span><span class="chip">Python</span>
-          <span class="chip">Zabbix</span><span class="chip">OpenVPN</span>
+          <span class="chip">Proxmox</span>
+          <span class="chip">Cisco</span>
+          <span class="chip">Linux</span>
+          <span class="chip">Python</span>
+          <span class="chip">Zabbix</span>
+          <span class="chip">OpenVPN</span>
         </div>
       </article>
     </div>
@@ -66,15 +82,23 @@
   <!-- FORMATIONS -->
   <section id="formations" class="section">
     <div class="container">
-      <h2 class="section-title"><span class="dot"></span> Formations</h2>
+      <h2 class="section-title">
+        <span class="dot" aria-hidden="true"></span> Formations
+      </h2>
       <div class="grid">
         <article class="card">
           <h3>BUT Réseaux & Télécommunications</h3>
           <small>2023 – Présent | IUT de Béthune</small>
+          <p>
+            Parcours orienté administration des réseaux, services IP, supervision et premières notions de cybersécurité.
+          </p>
         </article>
         <article class="card">
           <h3>Bac Pro Systèmes Numériques (SN)</h3>
           <small>2020 – 2023 | Lycée Saint Joseph, Hazebrouck</small>
+          <p>
+            Bases en réseaux, électronique et informatique, découverte des environnements techniques professionnels.
+          </p>
         </article>
       </div>
     </div>
@@ -83,41 +107,81 @@
   <!-- EXPÉRIENCES -->
   <section id="experiences" class="section">
     <div class="container">
-      <h2 class="section-title"><span class="dot"></span> Expériences Professionnelles</h2>
+      <h2 class="section-title">
+        <span class="dot" aria-hidden="true"></span> Expériences professionnelles
+      </h2>
       <div class="timeline">
         <div class="tl-item">
-          <h3>Orange WHOLESALE - Stage</h3>
+          <h3>Orange Wholesale – Stage</h3>
           <small>Avr. 2025 – Août 2025 • Technicien Service Client</small>
           <ul>
-            <li>Traitement des incidents clients opérateurs</li>
-            <li>Supervision réseau (C2E, CELAN et mobile)</li>
-            <li>Coordination des interventions terrain</li>
-            <li>Suivi qualité de service</li>
+            <li>Traitement d’incidents pour des clients opérateurs.</li>
+            <li>Supervision réseau (C2E, CELAN et réseau mobile).</li>
+            <li>Coordination des interventions terrain.</li>
+            <li>Contribution au maintien de la qualité de service.</li>
           </ul>
         </div>
+
         <div class="tl-item">
-          <h3>Groupe Les Mousquetaires - Stage</h3>
+          <h3>Groupe Les Mousquetaires – Stage</h3>
           <small>Mai 2023 – Juin 2023 • Assistant Administrateur Réseaux</small>
           <ul>
-            <li>Création d’outils d’optimisation en magasin</li>
-            <li>Collaboration avec l’équipe développement</li>
+            <li>Création d’outils d’optimisation pour les magasins.</li>
+            <li>Collaboration avec l’équipe de développement.</li>
           </ul>
         </div>
+
         <div class="tl-item">
-          <h3>Pro et Cie - Stage</h3>
+          <h3>Pro et Cie – Stage</h3>
           <small>Nov. 2021 – Janv. 2022 • Technicien Maintenance</small>
           <ul>
-            <li>Réparation d’appareils domestiques</li>
-            <li>Installation et maintenance d’antennes TV</li>
+            <li>Réparation d’appareils domestiques.</li>
+            <li>Installation et maintenance d’antennes TV.</li>
           </ul>
         </div>
+
         <div class="tl-item">
-          <h3>Sysdeco - Stage</h3>
+          <h3>Sysdeco – Stage</h3>
           <small>Janv. 2021 – Mars 2021 • Assistant Développeur</small>
           <ul>
-            <li>Découverte de l’administration réseau</li>
+            <li>Découverte de l’administration réseau et des applications métiers.</li>
           </ul>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- COMPÉTENCES (placeholder si tu as une section dédiée dans le CSS) -->
+  <section id="competences" class="section">
+    <div class="container">
+      <h2 class="section-title">
+        <span class="dot" aria-hidden="true"></span> Compétences
+      </h2>
+      <div class="grid">
+        <article class="card">
+          <h3>Réseaux & Systèmes</h3>
+          <ul>
+            <li>Configuration de routeurs/switchs Cisco (VLAN, routage, ACL).</li>
+            <li>Administration de base sur Linux (services, utilisateurs, SSH).</li>
+            <li>Virtualisation avec Proxmox VE.</li>
+          </ul>
+        </article>
+        <article class="card">
+          <h3>Supervision & Sécurité</h3>
+          <ul>
+            <li>Supervision réseau avec Zabbix.</li>
+            <li>Notions de VPN (OpenVPN, IPsec).</li>
+            <li>Premiers pas en pentest (Nmap, Hydra, environnements vulnérables).</li>
+          </ul>
+        </article>
+        <article class="card">
+          <h3>Développement & Scripts</h3>
+          <ul>
+            <li>Python (scripts, sockets, interfaces Tkinter).</li>
+            <li>Automatisation simple et outils d’analyse.</li>
+            <li>HTML / CSS / JavaScript pour sites vitrines.</li>
+          </ul>
+        </article>
       </div>
     </div>
   </section>
@@ -130,17 +194,19 @@
   <footer id="contact" class="footer">
     <div class="container">
       <h2>Contact</h2>
-      <p>Vous souhaitez échanger sur une opportunité d’alternance ?</p>
-      <a href="mailto:remileroy575@gmail.com?subject=Candidature%20Stage%20Réseaux%20et%20Cybersécurité&body=Bonjour%20Rémi,%0D%0A%0D%0AJe%20souhaite%20échanger%20avec%20vous%20au%20sujet%20de%20votre%20candidature." 
-      class="btn btn-ghost pill">
-      Envoyez-moi un email
-   </a>
+      <p>Vous souhaitez échanger sur une opportunité de stage en réseaux & cybersécurité&nbsp;?</p>
+
+      <a href="mailto:remileroy575@gmail.com?subject=Candidature%20Stage%20R%C3%A9seaux%20et%20Cybers%C3%A9curit%C3%A9&body=Bonjour%20R%C3%A9mi,%0D%0A%0D%0AJe%20souhaite%20%C3%A9changer%20avec%20vous%20au%20sujet%20de%20votre%20candidature%20de%20stage.%0D%0A"
+         class="btn btn-ghost pill">
+        Envoyez-moi un email
+      </a>
    
       <div class="footer-links mt-2">
         <a class="badge" href="https://github.com/luxio4" target="_blank" rel="noopener" aria-label="GitHub">
           <i class="fa-brands fa-github"></i> GitHub
         </a>
       </div>
+
       <p class="mt-2 small">&copy; 2025 Rémi LEROY – Tous droits réservés.</p>
     </div>
   </footer>
@@ -148,6 +214,7 @@
   <script>
     const navToggle = document.getElementById('nav-toggle');
     const nav = document.getElementById('cv-navigation');
+
     if (navToggle && nav) {
       navToggle.addEventListener('change', () => {
         const expanded = navToggle.checked;
@@ -155,13 +222,27 @@
         nav.classList.toggle('open', expanded);
       });
     }
+
     const backToTop = document.querySelector('.back-to-top');
-    const onScroll = () => {
-      if (window.scrollY > 400) backToTop.classList.add('show');
-      else backToTop.classList.remove('show');
-    };
-    window.addEventListener('scroll', onScroll);
-    backToTop.addEventListener('click', () => window.scrollTo({ top: 0, behavior: 'smooth' }));
+
+    if (backToTop) {
+      const onScroll = () => {
+        if (window.scrollY > 400) {
+          backToTop.classList.add('show');
+        } else {
+          backToTop.classList.remove('show');
+        }
+      };
+
+      window.addEventListener('scroll', onScroll);
+
+      backToTop.addEventListener('click', () => {
+        window.scrollTo({
+          top: 0,
+          behavior: 'smooth'
+        });
+      });
+    }
   </script>
 </body>
 </html>
